--- a/lectures/week3_ss_science_and_measure.html
+++ b/lectures/week3_ss_science_and_measure.html
@@ -1,28 +1,28 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Social Service Science &amp; Measurement</title>
+    <meta charset="utf-8">
+    <meta name="author" content="Joe Mienko" />
+    <link href="libs/remark-css/default.css" rel="stylesheet" />
+    <link rel="stylesheet" href="didact-arimo.css" type="text/css" />
+    <link rel="stylesheet" href="uw.css" type="text/css" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+# Social Service Science &amp; Measurement
+## Analytical Case Management
+### Joe Mienko
+
 ---
-title: Social Service Science & Measurement 
-subtitle: Analytical Case Management
-author: Joe Mienko
-institute: School of Social Work
-output:
-  xaringan::moon_reader:
-    widescreen: true
-    css: ["default", "didact-arimo.css", "uw.css"]   
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      highlightLines: true
-      countIncrementalSlides: false
----
+
 class: center, middle
 
-```{r setup, include=FALSE}
-options(htmltools.dir.version = FALSE)
-library(ggplot2)
-```
 
-```{r show-image-local,echo=FALSE,fig.align='center',out.width='95%'}
-knitr::include_graphics("SSW_UW.png")
-```
+
+&lt;img src="SSW_UW.png" width="95%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -30,7 +30,7 @@ knitr::include_graphics("SSW_UW.png")
 
 --
 
-- I am sick `r emo::ji("sick")` (although physician approved to lecture today) - this has caused delays on...
+- I am sick 😷 (although physician approved to lecture today) - this has caused delays on...
 
 --
 
@@ -121,9 +121,9 @@ Most social service science focuses on the development of **interventions**.
 
 # Assigned Readings
 
-From King, Keohane, & Verba, (1994)
+From King, Keohane, &amp; Verba, (1994)
 
-> We assume that it is possible to have some knowledge of the external world but that such knowledge is always uncertain. 
+&gt; We assume that it is possible to have some knowledge of the external world but that such knowledge is always uncertain. 
 
 --
 
@@ -145,25 +145,25 @@ This assumption exists independent of whether we are examining an issue *objecti
 
 # Assigned Readings
 
-From King, Keohane, & Verba, (1994)
+From King, Keohane, &amp; Verba, (1994)
 
 *Characteristics of scientific research...*
 
 --
 
-> The goal is inference
+&gt; The goal is inference
 
 --
 
-> The procedures are public
+&gt; The procedures are public
 
 --
 
-> The conclusions are uncertain 
+&gt; The conclusions are uncertain 
 
 --
 
-> The content is the method
+&gt; The content is the method
 
 --
 
@@ -173,17 +173,17 @@ These features apply equally to *analytical* case management decisions in direct
 
 # Assigned Readings
 
-From King, Keohane, & Verba, (1994)
+From King, Keohane, &amp; Verba, (1994)
 
 *Criteria for setting up a research project...*
 
 --
 
-> A research project should pose a uestion that is "important" in the real world. 
+&gt; A research project should pose a uestion that is "important" in the real world. 
 
 --
 
-> A research project should make a specific contribution to ... [scholarship]
+&gt; A research project should make a specific contribution to ... [scholarship]
 
 --
 
@@ -204,7 +204,7 @@ NASW Code of Ethics
 
 *1.03 Informed Consent*
 
-> Social workers should provide services to clients only in the context of a professional relationship based, when appropriate, on valid informed consent. Social workers should use clear and understandable language to inform clients of the purpose of the services, risks related to the services, limits to services because of the requirements of a third-party payer, relevant costs, reasonable alternatives, clients' right to refuse or withdraw consent, and the time frame covered by the consent. Social workers should provide clients with an opportunity to ask questions.
+&gt; Social workers should provide services to clients only in the context of a professional relationship based, when appropriate, on valid informed consent. Social workers should use clear and understandable language to inform clients of the purpose of the services, risks related to the services, limits to services because of the requirements of a third-party payer, relevant costs, reasonable alternatives, clients' right to refuse or withdraw consent, and the time frame covered by the consent. Social workers should provide clients with an opportunity to ask questions.
 
 Do we routinely ask for informed consent in direct-service practice?
 
@@ -216,7 +216,7 @@ NASW Code of Ethics
 
 *1.04 Competence*
 
-> Social workers should provide services and represent themselves as competent only within the boundaries of their education, training, license, certification, consultation received, supervised experience, or other relevant professional experience.
+&gt; Social workers should provide services and represent themselves as competent only within the boundaries of their education, training, license, certification, consultation received, supervised experience, or other relevant professional experience.
 
 Some of the measurement models we cover in this course require advanced training for administration and/or interpretation. What is our ethical obligation to clients in using and interpreting these models?
 
@@ -228,11 +228,11 @@ NASW Code of Ethics
 
 *5.02 Evaluation and Research*
 
-> (d) Social workers engaged in evaluation or research should carefully consider possible consequences and should follow guidelines developed for the protection of evaluation and research participants. Appropriate institutional review boards should be consulted.
+&gt; (d) Social workers engaged in evaluation or research should carefully consider possible consequences and should follow guidelines developed for the protection of evaluation and research participants. Appropriate institutional review boards should be consulted.
 
-> (e) Social workers engaged in evaluation or research should obtain voluntary and written informed consent from participants, when appropriate, without any implied or actual deprivation or penalty for refusal to participate; without undue inducement to participate; and with due regard for participants' well-being, privacy, and dignity. Informed consent should include information about the nature, extent, and duration of the participation requested and disclosure of the risks and benefits of participation in the research.
+&gt; (e) Social workers engaged in evaluation or research should obtain voluntary and written informed consent from participants, when appropriate, without any implied or actual deprivation or penalty for refusal to participate; without undue inducement to participate; and with due regard for participants' well-being, privacy, and dignity. Informed consent should include information about the nature, extent, and duration of the participation requested and disclosure of the risks and benefits of participation in the research.
 
-> (o) Social workers should report evaluation and research findings accurately. They should not fabricate or falsify results and should take steps to correct any errors later found in published data using standard publication methods.
+&gt; (o) Social workers should report evaluation and research findings accurately. They should not fabricate or falsify results and should take steps to correct any errors later found in published data using standard publication methods.
 
 
 ---
@@ -255,58 +255,7 @@ What does the raw score of a particular test mean?
 
 Most of the tests we will cover this quarter are "norm-referenced" tests. This means that the raw data from a test is compared to some larger distribution. 
 
-```{r std_normal, fig.height=3.5, dev='svg', echo=FALSE}
-xvalues <- data.frame(x = c(-3, 3))
-
-plot <- ggplot(xvalues, aes(x = xvalues))
-
-dnorm_three_sd <- function(x){
-  norm_three_sd <- dnorm(x)
-  # Have NA values outside interval x in [-3, 3]:
-  norm_three_sd[x <= -3 | x >= 3] <- NA
-  return(norm_three_sd)
-}
-
-dnorm_two_sd <- function(x){
-  norm_two_sd <- dnorm(x)
-  # Have NA values outside interval x in [-2, 2]:
-  norm_two_sd[x <= -2 | x >= 2] <- NA
-  return(norm_two_sd)
-}
-
-area_one_sd <- round(pnorm(1) - pnorm(-1), 4)
-
-dnorm_one_sd <- function(x){
-  norm_one_sd <- dnorm(x)
-  # Have NA values outside interval x in [-1, 1]:
-  norm_one_sd[x <= -1 | x >= 1] <- NA
-  return(norm_one_sd)
-}
-
-plot + stat_function(fun = dnorm) + 
- stat_function(fun = dnorm_three_sd, geom = "area", fill = "green", alpha = 0.3) +
- stat_function(fun = dnorm_two_sd, geom = "area", fill = "orange", alpha = 0.3) +
- stat_function(fun = dnorm_one_sd, geom = "area", fill = "orange", alpha = 0.3) +
- geom_vline(xintercept = 0, colour = "black", linetype = "dashed") +
- geom_text(x = 0.5, y = 0.2, size = 3.5, fontface = "bold",
- label = paste0(round((area_one_sd * 100)/2,2), "%")) +
- geom_text(x = -0.5, y = 0.2, size = 3.5, fontface = "bold",
- label = paste0(round((area_one_sd * 100)/2,2), "%")) +
- geom_text(x = 1.5, y = 0.05, size = 3.5, fontface = "bold",
- label = paste0(round((pnorm(2) - pnorm(1)) * 100,2), "%")) +
- geom_text(x = -1.5, y = 0.05, size = 3.5, fontface = "bold",
- label = paste0(round((pnorm(-1) - pnorm(-2)) * 100,2), "%")) +
- geom_text(x = 2.3, y = 0.01, size = 3.5, fontface = "bold",
- label = paste0(round((pnorm(3) - pnorm(2)) * 100,2), "%")) +
- geom_text(x = -2.3, y = 0.01, size = 3.5, fontface = "bold",
- label = paste0(round((pnorm(-2) - pnorm(-3)) * 100,2), "%")) +
- scale_x_continuous(breaks = c(-3:3)) + 
- labs(x = "\n z", y = "f(z) \n", title = "Standard Normal Distribution \n") +
- theme(plot.title = element_text(hjust = 0.5), 
- axis.title.x = element_text(face="bold", colour="blue", size = 12),
- axis.title.y = element_text(face="bold", colour="blue", size = 12)) +
-  theme_bw()
-```
+![](week3_ss_science_and_measure_files/figure-html/std_normal-1.svg)&lt;!-- --&gt;
 
 ---
 
@@ -372,19 +321,18 @@ Do you have to take this class?
 
 ## Mean
 
-$${\displaystyle {\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}}$$
+`$${\displaystyle {\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}}$$`
 
 ## Standard Deviation
 
-$$s_{n}={\sqrt {{\frac {1}{(n-1)}}\sum _{i=1}^{n}(x_{i}-{\overline {x}})^{2}}}$$
+`$$s_{n}={\sqrt {{\frac {1}{(n-1)}}\sum _{i=1}^{n}(x_{i}-{\overline {x}})^{2}}}$$`
 ---
 
 # Conspiracies Against the Laity
 
 ## The relevance of mean and standard deviation
 
-```{r std_normal, fig.height=3.5, dev='svg', echo=FALSE}
-```
+![](week3_ss_science_and_measure_files/figure-html/std_normal-1.svg)&lt;!-- --&gt;
 
 ---
 
@@ -394,20 +342,20 @@ Underlying assumption of almost all psychological measurement - asymptotic norma
 
 The mathematical definition of the "normal distribution" is as follows: 
 
-$${\displaystyle \Pr(x\;|\;\mu ,\sigma ^{2})={\frac {1}{\sqrt {2\pi \sigma ^{2}}}}\;e^{-{\frac {(x-\mu )^{2}}{2\sigma ^{2}}}}}$$
-Using the notation from above, $\overline {x} \approx \mu$ and $s \approx \sigma$.
+`$${\displaystyle \Pr(x\;|\;\mu ,\sigma ^{2})={\frac {1}{\sqrt {2\pi \sigma ^{2}}}}\;e^{-{\frac {(x-\mu )^{2}}{2\sigma ^{2}}}}}$$`
+Using the notation from above, `\(\overline {x} \approx \mu\)` and `\(s \approx \sigma\)`.
 
 If we believe the assumption of normality, we can calculate "z-scores" for a given test to contextualize a score against a larger population. 
 
-$$z={x-\mu  \over \sigma }.$$
+`$$z={x-\mu  \over \sigma }.$$`
 ---
 
 # Conspiracies Against the Laity
 
 From here, many psychological measures convert to a different scale for the sake of interpretation. For example, in the case of IQ, we convert the z-score to a scale in which the standard deviation is 15 and the mean is 100. In other words, we perform the following arithmetic to our z-score: 
 
-$$SS={z\cdot15+100},$$
-where $SS$ is a generic symbol for "standard score".
+`$$SS={z\cdot15+100},$$`
+where `\(SS\)` is a generic symbol for "standard score".
 
 ---
 
@@ -441,4 +389,41 @@ Let's collect some data and look at it in R
 
   - Olsen, Else Marie, Janne Petersen, Anne Mette Skovgaard, Birgitte Weile, Torben Jørgensen, and Charlotte M. Wright. *Failure to thrive: the prevalence and concurrence of anthropometric criteria in a general infant population.* Archives of disease in childhood 92, no. 2 (2007): 109-114.
   
-  - Review "Dietary history and recommended dietary intake in children" from UpToDate with a particular focus on Table 4. 
+  - Review "Dietary history and recommended dietary intake in children" from UpToDate with a particular focus on Table 4.
+    </textarea>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"highlightLines": true,
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function() {
+  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})();</script>
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+  }
+});
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
